// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dev/Drag and Drop Icon Tab Bar Hovered tab state 1`] = `
<div
  class="fddocs-icon-tab-container"
  style="min-height: 800px;"
>
  

  <div
    class="fd-icon-tab-bar"
  >
    
    
    <ul
      class="fd-icon-tab-bar__header"
      role="tablist"
    >
        
        
      <li
        class="fd-icon-tab-bar__item fd-icon-tab-bar__item--dnd-hovered"
        role="presentation"
      >
        
            
        <a
          class="fd-icon-tab-bar__tab"
          href="#section1"
          id="tab1"
          role="tab"
        >
          
                
          <span
            class="fd-icon-tab-bar__tag"
          >
            Attachments (16)
          </span>
          
            
        </a>
        
        
      </li>
      
        
      <li
        class="fd-icon-tab-bar__item"
        role="presentation"
      >
        
            
        <a
          aria-selected="true"
          class="fd-icon-tab-bar__tab"
          href="#section2"
          id="tab2"
          role="tab"
        >
          
                
          <span
            class="fd-icon-tab-bar__tag"
          >
            Info
          </span>
          
            
        </a>
        
        
      </li>
      
        
      <li
        class="fd-icon-tab-bar__item fd-icon-tab-bar__item--dnd-preview"
        role="presentation"
        style="position: absolute; left: 20px; top: 10px;"
      >
        
            
        <a
          class="fd-icon-tab-bar__tab"
          href="#section3"
          id="tab3"
          role="tab"
        >
          
                
          <span
            class="fd-icon-tab-bar__tag"
          >
            Approvals (42)
          </span>
          
            
        </a>
        
    
      </li>
    </ul>
     

  </div>
  

</div>
`;

exports[`Storyshots Dev/Drag and Drop Icon Tab Bar Separator hovered tab state 1`] = `
<div
  class="fddocs-icon-tab-container"
  style="min-height: 800px;"
>
  

  <div
    class="fd-icon-tab-bar"
  >
    
    
    <ul
      class="fd-icon-tab-bar__header"
      role="tablist"
    >
        
        
      <li
        class="fd-icon-tab-bar__item"
        role="presentation"
      >
        
            
        <a
          class="fd-icon-tab-bar__tab"
          href="#section1"
          id="tab1"
          role="tab"
        >
          
                
          <span
            class="fd-icon-tab-bar__tag"
          >
            Attachments (16)
          </span>
          
            
        </a>
        
        
      </li>
      
        
      <li
        class="fd-icon-tab-bar__item fd-icon-tab-bar__item--dnd-separator"
        role="presentation"
      >
        
            
        <a
          aria-selected="true"
          class="fd-icon-tab-bar__tab"
          href="#section2"
          id="tab2"
          role="tab"
        >
          
                
          <span
            class="fd-icon-tab-bar__tag"
          >
            Info
          </span>
          
            
        </a>
        
        
      </li>
      
        
      <li
        class="fd-icon-tab-bar__item fd-icon-tab-bar__item--dnd-preview"
        role="presentation"
        style="position: absolute; left: 128px; top: 10px"
      >
        
            
        <a
          class="fd-icon-tab-bar__tab"
          href="#section3"
          id="tab3"
          role="tab"
        >
          
                
          <span
            class="fd-icon-tab-bar__tag"
          >
            Approvals (42)
          </span>
          
            
        </a>
        
    
      </li>
    </ul>
     

  </div>
  

</div>
`;
